# velog-dashboard-v2-back-office

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile.consumer  README.md  conftest.py  docker-compose.override.yaml  docker-compose.override.yml  docker-compose.prod.yaml  docker-compose.yaml  mypy.ini  pyproject.toml  requirements.txt  run-consumer.sh  run-kill.sh  run.sh  temp.py
.github/workflows/: _slack-payload-e2e.yaml  run-daily-aggre-set1.yaml  run-daily-aggre-set10.yaml  run-daily-aggre-set11.yaml  run-daily-aggre-set12.yaml  run-daily-aggre-set13.yaml  run-daily-aggre-set14.yaml  run-daily-aggre-set15.yaml  run-daily-aggre-set16.yaml  run-daily-aggre-set17.yaml  run-daily-aggre-set18.yaml  run-daily-aggre-set19.yaml  run-daily-aggre-set2.yaml  run-daily-aggre-set20.yaml  test-ci.yaml  (+13 more)
backoffice/: asgi.py  logging_handlers.py  settings.py  urls.py  wsgi.py
consumer/: README.md  __init__.py  config.py  envelope.py  healthz.py  logger_config.py  message_handler.py  reclaimer.py  redis_client.py  setup_django.py  shutdown.py  stats_refresh_consumer.py
insight/: admin.py  models.py  schemas.py
modules/: post_slug_update_batch.py
noti/: models.py
ops_tracking/: admin.py  apps.py  models.py  services.py
posts/: admin.py  managers.py  models.py
qrcode/: admin.py  models.py
queue_monitor/: admin.py  apps.py  services.py
scraping/: aggregate_batch.py  aggregate_target_batch.py  apis.py  batch_notify.py  constants.py  main.py  protocols.py
tracking/: models.py
users/: admin.py  models.py  utils.py
utils/: utils.py
(+134 files in other folders)
