[tool.poetry]
name = "velog-dashboard-v2-back-office"
version = "0.1.0"
description = ""
authors = ["BDlhj <akk808@snu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
